src/test/valid/custom/stringsAsCharArray.wacc
begin
  string str = ['h', 'e', 'l', 'l'] ;
  println str
end

