src/test/invalid/semanticErr/custom/stringsAndArrayEquality.wacc
begin
  string a = "wacc";
  char[] b = ['w', 'a', 'c', 'c'];
  if a == b
  then
    println a
  else  
    println b
  fi
 end